<resources>
    <string name="app_name">ETEC-Boa Viagem</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>

    <string name="novoGasto">Novo Gasto</string>
    <string name="novaViagem">Nova Viagem</string>
    <string name="minhasViagens">Minhas Viagens</string>
    <string name="config">Configuração</string>

    <string name="destino">Destino</string>
    <string name="tipoViagem">Tipo da Viagem</string>
    <string name="lazer">Lazer</string>
    <string name="negocios">Negócios</string>
    <string name="dataChegada">Data da Chegada</string>
    <string name="dataSaida">Data da saída</string>
    <string name="orcamento">Orçamento</string>
    <string name="quantidadePessoas">No. de Pessoas</string>
    <string name="salvar">Salvar</string>
    <string name="selecione">Selecione</string>


    <string name="tipo_de_gasto">Tipo de gasto</string>
    <string name="valor">Valor</string>
    <string name="data">Data</string>
    <string name="descricao">Descrição</string>
    <string name="local">Local</string>


    <string-array name="tipoGasto">
    <item name="alimentacao">Alimentação</item>
    <item name="agua">Água</item>
    <item name="luz">Luz</item>
    <item name="inernet">Internet</item>
    <item name="tvcabo">Tv a cabo</item>
    </string-array>
</resources>
