<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GastoActivity"
    android:id="@+id/activity_gasto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/azul">

            <TextView
                style="@style/titulo"
                android:text="@string/novoGasto"/>

        </LinearLayout>

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1">
                <TextView
                    android:id="@+id/viewTipoGasto"
                    android:text="@string/tipo_de_gasto" />

                <Spinner
                    android:id="@+id/spnTipoGasto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/tipo_de_gasto"/>

            <TableRow>
                <TextView
                    android:layout_gravity="left"
                    android:text="@string/valor" />
                <TextView
                    android:layout_gravity="left"
                    android:text="@string/data"/>
            </TableRow>
            <TableRow>



            <EditText
                android:id="@+id/edtvalor"/>

                <Button android:id="@+id/btndata"/>

            </TableRow>

            <TextView
                android:layout_gravity="left"
                android:text="@string/descricao" />
            <EditText
                android:id="@+id/edtdescricao"
                android:inputType="text"/>

            <TextView
                android:layout_gravity="left"
                android:text="@string/local"  />
            <EditText
                android:id="@+id/edtlocal"
                android:inputType="text"/>

            <Button android:text="@string/salvar" />

        </TableLayout>

    </LinearLayout>


</ScrollView>