<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuActivity"
    android:id="@+id/activity_menu" >

    <TextView
        android:id="@+id/textView"
        style="@style/titulo"
        android:text="@string/app_name" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/azul"
        android:clickable="true">

        <TextView
            android:id="@+id/viewNovoGasto"
            style="@style/ItemMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="80dp"
            android:drawableTop="@drawable/novo_gasto"
            android:onClick="onSelecionarGasto"
            android:text="@string/novoGasto" />

        <TextView
            android:id="@+id/viewNovaViagem"
            style="@style/ItemMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/viewNovoGasto"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"
            android:clickable="true"
            android:drawableTop="@drawable/nova_viagem"
            android:onClick="onSelecionarViagem"
            android:text="@string/novaViagem" />

        <TextView
            android:id="@+id/viewMinhasViagens"
            style="@style/ItemMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/viewNovoGasto"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="120dp"
            android:drawableTop="@drawable/minhas_viagens"
            android:text="@string/minhasViagens" />

        <TextView
            android:id="@+id/viewConfig"
            style="@style/ItemMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/viewNovaViagem"
            android:layout_alignBottom="@id/viewMinhasViagens"
            android:drawableTop="@drawable/configuracoes"
            android:text="@string/config" />

    </RelativeLayout>
</LinearLayout>





